- drakbug:
  o better behaviour when resizing
  o use a TextView instead of Label so that text is selectable (see #33023)
  o better formatting

Version 10.4.192 - 12 September 2007, by Olivier "blino" Blin

- localedrake
  o drop support for iiimf
- list jmicron driver in disk/ide
- library: have "defaults" mount option instead of empty string (for rescue)
- service_harddrake: drop snd-usb-audio blacklist, now done with a modprobe.d file

Version 10.4.190 - 5 September 2007, by Thierry Vignaud

- display a warning when capslock is enabled and entering a password (#33028)

Version 10.4.188 - 4 September 2007, by Thierry Vignaud

- hardware detection layer:
  o add support for tape device again (#31073)
  o enumerate generic SCSI devices again
- diskdrake
  o add a comment (a la ubuntu) in fstab when using UUID=
- harddrake
  o detect PS2 to USB converters as keyboards
  o display an identifier for generic SCSI devices
  o list generic SCSI devices

Version 10.4.184 - 3 September 2007, by Thierry Vignaud

- diskdrake
  o support for UUID in filesystems (and UUID=... in fstab)

Version 10.4.183 - 31 August 2007, by Pascal "Pixel" Rigaux

- bootloader-config
  o handle new naming of vmlinuz flavors: vmlinuz-<version>-<flavor>-Xmdv
    instead of vmlinuz-<version>-Xmdv<flavor>
  o always use "linux" short name instead of "linux-<flavor>"
    (since the long name is quite nice nowadays)
- assume system is a laptop if it contains some "Intel Corporation|Mobile" devices
  (fix Samsung Q1U detection, #32967)
- draksound, harddrake service:
  o enable snd-ac97-codec power_save=1 option if installed on laptop (#32213)

Version 10.4.181 - 29 August 2007, by Thierry Vignaud

- fix plural translating for C locale
- diskdrake:
  o fix displaying umount error message (#32273)
  o write mdadm.conf when it is modified (#32360)
    (a nicer fix would be to write it when needed, not so soon, but it's harder)
  o change the legend and the colors per partition