@@ -2,6 +2,11 @@
   o better behaviour when resizing
   o use a TextView instead of Label so that text is selectable (see #33023)
   o better formatting
+- draksound:
+  o prevent stupid & useless "driver for your sound card is unlisted"
+  o no more need to:
+    * list OSS/ALSA alternatives if none
+    * sync with list_modules
 
 Version 10.4.192 - 12 September 2007, by Olivier "blino" Blin
 
